--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="assets/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" href="assets/favicon.ico" />
-    <title>Welcome to NEAR with React</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script src="./index.js" type="module"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="assets/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="apple-touch-icon" href="assets/favicon.ico" />
+  <!-- <link href='https://fonts.googleapis.com/css?family=Crushed' rel='stylesheet'> -->
+  <!-- <link rel="stylesheet" href="./output.css"> -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
+  <title>Welcome to NEAR with React</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root">
+
+
+  </div>
+  <script src="./index.jsx" type="module"></script>
+</body>
+
 </html>
